<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/framePrincipal"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="100"
             android:background="@color/primary">

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:src="@drawable/no_disponible"
        android:layout_gravity="top|start"
        android:scaleType="fitStart"/>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            >



            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                app:cardElevation="@dimen/spacing_medium"
                android:paddingTop="200dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lblTitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_titile"/>



                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/txtTitle"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.75"/>

                            <ImageButton
                                android:id="@+id/btnSearchImdb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@android:drawable/ic_menu_search"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/lblFormat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_format"></TextView>

                                <Spinner
                                    android:id="@+id/cmbFormat"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"></Spinner>



                                <TextView
                                    android:id="@+id/textView1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_gender"></TextView>

                                <Spinner
                                    android:id="@+id/cmbGender"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"></Spinner>



                                <LinearLayout
                                    android:id="@+id/linearLayout1"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/lblLoan"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/_loan"></TextView>

                                    <ToggleButton
                                        android:id="@+id/tglLoan"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10px"
                                        android:textOff="@string/_no"
                                        android:textOn="@string/_yes"></ToggleButton>

                                </LinearLayout>

                                <TextView
                                    android:id="@+id/lblDuration"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_duration"></TextView>

                                <EditText
                                    android:id="@+id/txtDuration"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"></EditText>


                            </LinearLayout>
                        </LinearLayout>

                        <RatingBar
                            android:id="@+id/rtEvaluation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></RatingBar>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <LinearLayout
                            android:id="@+id/laySinopsis"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_sinopsis"/>

                            <EditText
                                android:id="@+id/txtSinopsis"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:gravity="top"
                                android:scrollbars="vertical"/>


                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ImageButton
                android:id="@+id/fab"
                style="@style/FabSaveStyle"
                android:layout_gravity="end"
                android:layout_marginTop="185dp"
                android:layout_marginRight="20dp"/>


        </FrameLayout>
    </ScrollView>


    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_height="@dimen/height_toolbar"
        android:layout_width="match_parent"
        android:background="@color/primary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>
</FrameLayout>