<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detail_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/no_disponible"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_toolbar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">
                <android.widget.ProgressBar android:id="@+id/progressBar"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:indeterminate="true"
                    android:visibility="gone"/>
                </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lblTitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_titile"/>



                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/txtTitle"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.75"/>

                            <ImageButton
                                android:id="@+id/btnSearchImdb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@android:drawable/ic_menu_search"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/lblFormat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_format"></TextView>

                                <Spinner
                                    android:id="@+id/cmbFormat"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"></Spinner>



                                <TextView
                                    android:id="@+id/textView1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_gender"></TextView>

                                <Spinner
                                    android:id="@+id/cmbGender"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"></Spinner>



                                <LinearLayout
                                    android:id="@+id/linearLayout1"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/lblLoan"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/_loan"></TextView>

                                    <ToggleButton
                                        android:id="@+id/tglLoan"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10px"
                                        android:textOff="@string/_no"
                                        android:textOn="@string/_yes"></ToggleButton>

                                </LinearLayout>

                                <TextView
                                    android:id="@+id/lblDuration"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_duration"></TextView>

                                <EditText
                                    android:id="@+id/txtDuration"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"></EditText>


                            </LinearLayout>
                        </LinearLayout>

                        <RatingBar
                            android:id="@+id/rtEvaluation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></RatingBar>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <LinearLayout
                            android:id="@+id/laySinopsis"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_sinopsis"/>

                            <EditText
                                android:id="@+id/txtSinopsis"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:gravity="top"
                                android:scrollbars="vertical"/>


                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
   <android.support.design.widget.FloatingActionButton
       android:id="@+id/fabSave"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save"
        app:layout_anchor="@id/detail_appbar"
        app:layout_anchorGravity="bottom|right|end"
        />

</android.support.design.widget.CoordinatorLayout>